--- a/src/css/login.css
+++ b/src/css/login.css
@@ -17,7 +17,7 @@
   .login__logo {
     width: 100px;
     object-fit: contain;
-    margin: 20px 0;
+    margin: 20px auto;
   }
   
   .login__container > h1 {
@@ -44,7 +44,9 @@
     font-size: 12px;
   }
   
-  .login__container > form > button {
+  
+  
+  .login__signInButton {
     background-color: #f0c14b;
     border-radius: 2px;
     width: 100%;
@@ -54,7 +56,15 @@
     margin-top: 10px;
     color: #111;
   }
-  
-  .login__signInButton {
+
+  .login__registerButton{
+   
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    border-color: darkgray;
+    margin-top: 10px;
+   
   }
   
