--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,6 +2,11 @@
     max-width: 1500px;
     margin: 0 auto;
   }
+
+.home__container{
+  max-height: 50vh;
+
+  }
   
   .home__image {
     width: 100%;
