--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -1,26 +1,35 @@
 .checkout {
-    display: flex;
-    padding: 20px;
-    background-color: white;
-    height: max-content;
-  }
-  
-  .checkout__ad {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 10px;
-  }
-  
-  .checkout__title {
-    margin-right: 10px;
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
-  }
-  
-  .checkout__left {
-  }
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
+}
 
-  
-  
-  .checkout__right {
-  }
+.checkout__ad {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
+}
+.checkout h2 {
+  padding-left: 10px;
+  color: #f0c14b;
+}
+
+.checkout__title {
+  margin-right: 10px;
+  padding: 10px;
+  border-bottom: 1px solid lightgray;
+}
+
+.checkout__left {
+}
+
+.checkout__right {
+}
+
+.emptybasket {
+  margin-left: 50%;
+  margin-top: 10%;
+  transform: translate(-50%);
+  color: #f54;
+}
