--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,42 +1,51 @@
 .product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    max-height: 400px;
-    min-width: 100px;
-    margin: 10px;
-    padding: 20px;
-    width: 100%;
-    z-index: 1;
-    background-color: white;
-  }
-  
-  .product__info {
-    height: 100px;
-    margin-bottom: 15px;
-  }
-  
-  .product__price {
-    margin-top: 5px;
-  }
-  
-  .product__rating {
-    display: flex;
-    color: #f0c14b;
-  
-  }
-  
-  .product > img {
-    width: 100%;
-    max-height: 200px;
-    object-fit: contain;
-    margin-bottom: 15px;
-  }
-  
-  .product > button {
-    background-color: #f0c14b;
-    border: 1px solid;
-    border-color: #a88734 #9c7e31 #846a29;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  max-height: 400px;
+  min-width: 100px;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  z-index: 1;
+  transition: 0.5s;
+  background-color: white;
+}
+
+.product:hover {
+  transform: scale(1.03);
+  color: #f0c14b;
+}
+
+.product__info {
+  height: 100px;
+  padding: 0 10px;
+  margin-bottom: 20px;
+}
+.product__info p {
+  margin-right: 10px;
+  word-wrap: break-word;
+}
+
+.product__price {
+  margin-top: 5px;
+}
+
+.product__rating {
+  display: flex;
+  color: #f0c14b;
+}
+
+.product > img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+
+.product > button {
+  background-color: #f0c14b;
+  border: 1px solid;
+  border-color: #a88734 #9c7e31 #846a29;
+}
